<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button07"
                android:textSize="48sp" />

            <Button
                android:id="@+id/button08"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button08"
                android:textSize="48sp" />

            <Button
                android:id="@+id/button09"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button09"
                android:textSize="48sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonAdd"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button04"
                android:textSize="48sp" />

            <Button
                android:id="@+id/button05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button05"
                android:textSize="48sp" />

            <Button
                android:id="@+id/button06"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button06"
                android:textSize="48sp" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonSub"
                android:textSize="48sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button01"
                android:textSize="48sp" />

            <Button
                android:id="@+id/button02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button02"
                android:textSize="48sp" />

            <Button
                android:id="@+id/button03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button03"
                android:textSize="48sp" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonDiv"
                android:textSize="48sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonCE"
                android:textSize="34sp" />

            <Button
                android:id="@+id/button00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button00"
                android:textSize="48sp" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonDot"
                android:textSize="48sp" />

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/buttonMult"
                android:textSize="48sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonEq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickFunctionButton"
            android:text="@string/buttonEq"
            android:textSize="48sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>